Add caching to UrlKeySetFactory
Implemented caching in the UrlKeySetFactory to store and retrieve URL data. This is accomplished by adding the PSR Cache package to the composer.json file and incorporating it with the CacheItemPoolInterface in the UrlKeySetFactory class. This addition intends to improve performance by storing data from previous URL requests and reusing them, if available, instead of making repeated URL requests.

--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -2044,6 +2044,11 @@ parameters:
 			path: src/Library/KeyManagement/KeyConverter/RSAKey.php
 
 		-
+			message: "#^Method Jose\\\\Component\\\\KeyManagement\\\\UrlKeySetFactory\\:\\:getContent\\(\\) should return string but returns mixed\\.$#"
+			count: 1
+			path: src/Library/KeyManagement/UrlKeySetFactory.php
+
+		-
 			message: "#^Cannot cast mixed to string\\.$#"
 			count: 1
 			path: src/Library/KeyManagement/X5UFactory.php
