Update dependency versions in composer.json
The "infection/infection" package version range has been expanded to include "^0.28", offering support for newer versions of this testing tool. Moreover, the "symfony/phpunit-bridge" package has been removed from the project dependencies.

--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
         "ext-gmp": "*",
         "ext-sodium": "*",
         "ekino/phpstan-banned-code": "^1.0",
-        "infection/infection": "^0.27",
+        "infection/infection": "^0.27|^0.28",
         "matthiasnoback/symfony-config-test": "^5.0",
         "nikic/php-parser": "^4.18",
         "paragonie/sodium_compat": "^1.20",
@@ -86,7 +86,6 @@
         "symfony/clock": "^7.0",
         "symfony/finder": "^7.0",
         "symfony/framework-bundle": "^7.0",
-        "symfony/phpunit-bridge": "^7.0",
         "symfony/serializer": "^7.0",
         "symfony/var-dumper": "^7.0",
         "symfony/yaml": "^7.0",
