--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,6 @@
         "ekino/phpstan-banned-code": "^1.0",
         "infection/infection": "^0.27|^0.28",
         "matthiasnoback/symfony-config-test": "^5.0",
-        "nikic/php-parser": "^4.18",
         "paragonie/sodium_compat": "^1.20",
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpbench/phpbench": "^1.2",
@@ -77,7 +76,7 @@
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.1",
         "phpstan/phpstan-strict-rules": "^1.4",
-        "phpunit/phpunit": "^10.5.10",
+        "phpunit/phpunit": "^10.5.10|^11.0",
         "qossmic/deptrac-shim": "^1.0",
         "rector/rector": "^1.0",
         "roave/security-advisories": "dev-latest",
