--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
         "ext-gmp": "*",
         "ext-sodium": "*",
         "ekino/phpstan-banned-code": "^1.0",
-        "infection/infection": "^0.27|^0.28",
+        "infection/infection": "^0.28",
         "matthiasnoback/symfony-config-test": "^5.0",
         "paragonie/sodium_compat": "^1.20",
         "php-parallel-lint/php-parallel-lint": "^1.3",
