Remove deprecated checks and update test dependencies
The deprecated checks in the UrlKeySetFactory are removed. Slow test detection is added to PHPUnit tests with the Ergebnis\PHPUnit\SlowTestDetector dependency. Several method parameters in tests are also updated for clarity and to reduce cognitive load in parsing the test setup and assertions.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -32,4 +32,10 @@
             <directory suffix=".php">./src</directory>
         </include>
     </source>
+    <extensions>
+        <bootstrap class="Ergebnis\PHPUnit\SlowTestDetector\Extension">
+            <parameter name="maximum-count" value="50"/>
+            <parameter name="maximum-duration" value="100"/>
+        </bootstrap>
+    </extensions>
 </phpunit>
