--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,7 @@
         "ext-gmp": "*",
         "ext-sodium": "*",
         "ekino/phpstan-banned-code": "^1.0",
+        "ergebnis/phpunit-slow-test-detector": "^2.14",
         "infection/infection": "^0.28",
         "matthiasnoback/symfony-config-test": "^5.0",
         "paragonie/sodium_compat": "^1.20",
@@ -74,13 +75,18 @@
         "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan": "^1.8",
         "phpstan/phpstan-deprecation-rules": "^1.0",
+        "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-phpunit": "^1.1",
         "phpstan/phpstan-strict-rules": "^1.4",
+        "phpstan/phpstan-symfony": "^1.3",
         "phpunit/phpunit": "^10.5.10|^11.0",
         "qossmic/deptrac-shim": "^1.0",
         "rector/rector": "^1.0",
         "roave/security-advisories": "dev-latest",
         "spomky-labs/aes-key-wrap": "^7.0",
+        "staabm/phpstan-dba": "^0.2.79",
+        "staabm/phpstan-todo-by": "^0.1.25",
+        "struggle-for-php/sfp-phpstan-psr-log": "^0.20.0",
         "symfony/browser-kit": "^7.0",
         "symfony/clock": "^7.0",
         "symfony/finder": "^7.0",
