--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
         "symfony/console": "^7.0",
         "symfony/dependency-injection": "^7.0",
         "symfony/event-dispatcher": "^7.0",
-        "symfony/http-client": "^7.0",
+        "symfony/http-client-contracts": "^3.4",
         "symfony/http-kernel": "^7.0"
     },
     "require-dev": {
@@ -88,6 +88,7 @@
         "staabm/phpstan-todo-by": "^0.1.25",
         "struggle-for-php/sfp-phpstan-psr-log": "^0.20.0",
         "symfony/browser-kit": "^7.0",
+        "symfony/http-client": "^7.0",
         "symfony/clock": "^7.0",
         "symfony/finder": "^7.0",
         "symfony/framework-bundle": "^7.0",
