--- a/src/Bundle/composer.json
+++ b/src/Bundle/composer.json
@@ -44,7 +44,7 @@
         "symfony/console": "^7.0",
         "symfony/dependency-injection": "^7.0",
         "symfony/event-dispatcher": "^7.0",
-        "symfony/http-client": "^7.0",
+        "symfony/http-client-contracts": "^3.4",
         "symfony/http-kernel": "^7.0",
         "web-token/jwt-library": "^4.0"
     },
