Add tasks for automation with Castor and made relevant updates
Introduced Castor tasks to automate and streamline the build process. Tasks include mutation testing, unit tests, static analysis, and coding standard checks. Various integration scripts were updated to use these tasks. Updated `.gitignore` and `.gitattributes` to handle Castor related files correctly. Documentation added or updated throughout the codebase for better code understanding.

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,7 @@
 /.gitsplit.yml export-ignore
 /monorepo-builder.php export-ignore
 /CODE_OF_CONDUCT.md export-ignore
+/castor.php export-ignore
 /deptrac.yaml export-ignore
 /ecs.php export-ignore
 /infection.json export-ignore
