--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -30,17 +30,33 @@ jobs:
         uses: "shivammathur/setup-php@v2"
         with:
           php-version: "8.3"
+          extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
+          tools: castor
 
       - name: "Checkout code"
         uses: "actions/checkout@v4"
 
+      - name: "Fetch Git base reference"
+        run: "git fetch --depth=1 origin ${GITHUB_BASE_REF}"
+
+      - name: "Validate Composer configuration"
+        run: "castor validate"
+
       - name: "Install dependencies"
         uses: "ramsey/composer-install@v3"
         with:
-          dependency-versions: "highest"
+          dependency-versions: "${{ matrix.dependencies }}"
+          composer-options: "--optimize-autoloader"
+
+      - name: "Cache dependencies"
+        uses: "actions/cache@v4"
+        id: "cache"
+        with:
+          path: "composer-cache"
+          key: "${{ runner.os }}-${{ hashFiles('**/composer.json') }}"
 
       - name: "Check source code for syntax errors"
-        run: "composer exec -- parallel-lint src/ tests/"
+        run: "castor lint"
 
   unit_tests:
     name: "2️⃣ Unit and functional tests"
@@ -63,6 +79,7 @@ jobs:
         with:
           php-version: "${{ matrix.php-version }}"
           extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
+          tools: castor
           coverage: "xdebug"
 
       - name: "Checkout code"
@@ -75,7 +92,7 @@ jobs:
           composer-options: "--optimize-autoloader"
 
       - name: "Execute unit tests"
-        run: "make ci-cc"
+        run: "castor test --coverage-text"
 
   static_analysis:
     name: "3️⃣ Static Analysis"
@@ -89,12 +106,10 @@ jobs:
         with:
           php-version: "8.3"
           extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
+          tools: castor
 
       - name: "Checkout code"
         uses: "actions/checkout@v4"
-
-      - name: "Validate Composer configuration"
-        run: "composer validate --strict"
 
       - name: "Install dependencies"
         uses: "ramsey/composer-install@v3"
@@ -103,7 +118,7 @@ jobs:
           composer-options: "--optimize-autoloader"
 
       - name: "Execute static analysis"
-        run: "make st"
+        run: "castor stan"
 
   coding_standards:
     name: "4️⃣ Coding Standards"
@@ -117,12 +132,39 @@ jobs:
         with:
           php-version: "8.3"
           extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
+          tools: castor
 
       - name: "Checkout code"
         uses: "actions/checkout@v4"
 
+      - name: "Install dependencies"
+        uses: "ramsey/composer-install@v3"
+        with:
+          dependency-versions: "highest"
+          composer-options: "--optimize-autoloader"
+
       - name: "Check adherence to EditorConfig"
         uses: "greut/eclint-action@v0"
+
+      - name: "Check coding style"
+        run: "castor cs"
+
+  check_licenses:
+    name: "5️⃣ Check licenses"
+    needs:
+      - "byte_level"
+      - "syntax_errors"
+    runs-on: "ubuntu-latest"
+    steps:
+      - name: "Set up PHP"
+        uses: "shivammathur/setup-php@v2"
+        with:
+          php-version: "8.3"
+          extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
+          tools: castor
+
+      - name: "Checkout code"
+        uses: "actions/checkout@v4"
 
       - name: "Install dependencies"
         uses: "ramsey/composer-install@v3"
@@ -131,7 +173,7 @@ jobs:
           composer-options: "--optimize-autoloader"
 
       - name: "Check coding style"
-        run: "make ci-cs"
+        run: "castor check-licenses"
 
   rector_checkstyle:
     name: "6️⃣ Rector Checkstyle"
@@ -145,13 +187,11 @@ jobs:
         with:
           php-version: "8.3"
           extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
+          tools: castor
           coverage: "xdebug"
 
       - name: "Checkout code"
         uses: "actions/checkout@v4"
-
-      - name: "Fetch Git base reference"
-        run: "git fetch --depth=1 origin ${GITHUB_BASE_REF}"
 
       - name: "Install dependencies"
         uses: "ramsey/composer-install@v3"
@@ -160,7 +200,7 @@ jobs:
           composer-options: "--optimize-autoloader"
 
       - name: "Execute Rector"
-        run: "make rector"
+        run: "castor rector"
 
   exported_files:
     name: "7️⃣ Exported files"
