--- a/.github/workflows/infection.yml
+++ b/.github/workflows/infection.yml
@@ -1,4 +1,4 @@
-name: "Integrate"
+name: "Infection"
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   mutation_testing:
-    name: "5️⃣ Mutation Testing"
+    name: "0️⃣ Mutation Testing"
     runs-on: "ubuntu-latest"
     steps:
       - name: "Set up PHP"
@@ -15,12 +15,10 @@ jobs:
         with:
           php-version: "8.3"
           extensions: "json, mbstring, openssl, sqlite3, curl, uuid"
+          tools: castor
 
       - name: "Checkout code"
         uses: "actions/checkout@v4"
-
-      - name: "Fetch Git base reference"
-        run: "git fetch --depth=1 origin ${GITHUB_BASE_REF}"
 
       - name: "Install dependencies"
         uses: "ramsey/composer-install@v3"
@@ -29,4 +27,4 @@ jobs:
           composer-options: "--optimize-autoloader"
 
       - name: "Execute Infection"
-        run: "make ci-mu"
+        run: "castor infect"
