Update trigger for gitsplit workflow
The gitsplit workflow trigger has been updated from running on any tag push and release publication to running only on push to any branch ending in ".x". This should create a more targeted and efficient workflow.

--- a/.github/workflows/gitsplit.yml
+++ b/.github/workflows/gitsplit.yml
@@ -1,10 +1,8 @@
 name: gitsplit
 on:
   push:
-    tags:
-      - '*'
-  release:
-    types: [published]
+    branches:
+      - "*.x"
 
 jobs:
   gitsplit:
