Restore repositories to .gitsplit.yml
The commit restores the .gitsplit.yml file with old repositories in the "/deprecated" section. Each repository has been assigned a prefix and target, effectively setting up paths for future code splits.

--- a/.gitsplit.yml
+++ b/.gitsplit.yml
@@ -5,6 +5,57 @@ splits:
     target: "https://${GH_TOKEN}@github.com/web-token/jwt-library.git"
   - prefix: "src/Experimental"
     target: "https://${GH_TOKEN}@github.com/web-token/jwt-experimental.git"
+  - prefix: "src/Deprecated/Signature"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-signature.git"
+  - prefix: "src/Deprecated/Checker"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-checker.git"
+  - prefix: "src/Deprecated/Console"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-console.git"
+  - prefix: "src/Deprecated/Core"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-core.git"
+  - prefix: "src/Deprecated/Ecc"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-util-ecc.git"
+  - prefix: "src/Deprecated/Encryption"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption.git"
+  - prefix: "src/Deprecated/KeyManagement"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-key-mgmt.git"
+  - prefix: "src/Deprecated/NestedToken"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-nested-token.git"
+  - prefix: "src/Deprecated/EncryptionAlgorithm/ContentEncryption/AESCBC"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-aescbc.git"
+  - prefix: "src/Deprecated/EncryptionAlgorithm/ContentEncryption/AESGCM"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-aesgcm.git"
+  - prefix: "src/Deprecated/EncryptionAlgorithm/KeyEncryption/AESGCMKW"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-aesgcmkw.git"
+  - prefix: "src/Deprecated/EncryptionAlgorithm/KeyEncryption/AESKW"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-aeskw.git"
+  - prefix: "src/Deprecated/EncryptionAlgorithm/KeyEncryption/Direct"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-dir.git"
+  - prefix: "src/Deprecated/EncryptionAlgorithm/KeyEncryption/ECDHES"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-ecdh-es.git"
+  - prefix: "src/Deprecated/EncryptionAlgorithm/KeyEncryption/PBES2"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-pbes2.git"
+  - prefix: "src/Deprecated/EncryptionAlgorithm/KeyEncryption/RSA"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-rsa.git"
+  - prefix: "src/Deprecated/SignatureAlgorithm/ECDSA"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-signature-algorithm-ecdsa.git"
+  - prefix: "src/Deprecated/SignatureAlgorithm/EdDSA"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-signature-algorithm-eddsa.git"
+  - prefix: "src/Deprecated/SignatureAlgorithm/None"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-signature-algorithm-none.git"
+  - prefix: "src/Deprecated/SignatureAlgorithm/HMAC"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-signature-algorithm-hmac.git"
+  - prefix: "src/Deprecated/SignatureAlgorithm/RSA"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-signature-algorithm-rsa.git"
+  - prefix: "src/Deprecated/SignatureAlgorithm/Experimental"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-signature-algorithm-experimental.git"
+  - prefix: "src/Deprecated/EncryptionAlgorithm/Experimental"
+    target: "https://${GH_TOKEN}@github.com/web-token/jwt-encryption-algorithm-experimental.git"
+  - prefix: "src/Deprecated/Pack/Encryption"
+    target: "https://${GH_TOKEN}@github.com/web-token/encryption-pack.git"
+  - prefix: "rc/Deprecated/Pack/Signature"
+    target: "https://${GH_TOKEN}@github.com/web-token/signature-pack.git"
+
 
 origins:
   - ^\d+\.\d+\.x$
